Updating date and exercise page

--- a/frontend/ruti-front/src/components/styles/DayCard.css
+++ b/frontend/ruti-front/src/components/styles/DayCard.css
@@ -1,12 +1,25 @@
-/* src/components/Card.css o el archivo CSS que estés utilizando */
-.card-text {
-    display: flex;
-    justify-content: space-between; /* Distribuye el espacio entre las columnas */
-    align-items: flex-start; /* Alinea los elementos verticalmente en la parte superior */
-  }
-  
-  .date-column {
-    display: flex;
-    flex-direction: column; /* Organiza los elementos en una columna */
-    align-items: flex-start; /* Alinea los elementos horizontalmente a la izquierda */
-  }
+.content-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.date-container {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.date-column {
+  flex: 1;
+}
+
+.title {
+  align-items: center;
+}
+
+
+.carousel-control-prev-icon:hover,
+.carousel-control-next-icon:hover {
+  background-color: #0056b3;
+}
