--- a/frontend/ruti-front/src/components/styles/RoutineStyles/RoutineHeader.css
+++ b/frontend/ruti-front/src/components/styles/RoutineStyles/RoutineHeader.css
@@ -1,18 +1,44 @@
 .header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .date-container {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-  }
-  
-  .date-column {
-    flex: 1;
-  }
-  
- 
-  
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.header-content {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  align-items: center;
+  position: relative;
+}
+
+.header h1 {
+  margin: 0;
+  justify-content: center;
+}
+
+.dropdown {
+  position: absolute;
+  right: 0;
+}
+
+.date-container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.date-column {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.label {
+  font-weight: bold;
+}
+
+.date {
+  margin: 0;
+}
