--- a/frontend/ruti-front/src/components/styles/GeneralStyles/Header.css
+++ b/frontend/ruti-front/src/components/styles/GeneralStyles/Header.css
@@ -1,35 +1,29 @@
-/* src/components/Header.css */
-
+/* Estilos para el Navbar */
 .navbar {
-    background-color: #4c9ced;
-    /* Color de fondo del header */
+    background-color: #4c9ced;; /* Color de fondo del Navbar */
+    padding: 1rem; /* Espaciado interno */
 }
 
-.container{
-    width: 100%;
-}
-
+/* Estilos para el título del Navbar */
 .navbar-brand {
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: #4c9ced;
-    justify-content: center;
+    font-size: 1.5rem; /* Tamaño de fuente */
+    font-weight: bold; /* Negrita */
+    color: #ffffff; /* Color del texto */
+    text-transform: uppercase; /* Texto en mayúsculas */
+    letter-spacing: 0.1rem; /* Espaciado entre letras */
+    transition: color 0.3s ease; /* Transición suave para el color */
 }
 
-.navbar-nav .nav-link {
-    color: #2d75bd;
-    font-size: 1.2rem;
-    margin-right: 1rem;
+.navbar-brand:hover {
+    color: #ffcc00; /* Color del texto al pasar el ratón */
+    text-decoration: none; /* Sin subrayado al pasar el ratón */
 }
 
-.navbar-nav .nav-link:hover {
-    color: #206ba8;
-}
-
+/* Estilos para el botón de toggle del Navbar */
 .navbar-toggler {
-    border-color: rgba(255, 255, 255, 0.1);
+    border: none; /* Sin borde */
 }
 
 .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba%28255, 255, 255, 0.5%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba%288, 8, 8, 0.5%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
