--- a/frontend/ruti-front/src/components/styles/LoginStyles/LoginStyles.css
+++ b/frontend/ruti-front/src/components/styles/LoginStyles/LoginStyles.css
@@ -1,52 +1,78 @@
+/* Estilos para el contenedor de inicio de sesión */
 .login {
-    text-align: center;
-  }
-  
-  .login-header {
-    min-height: 70vh;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    color: black;
-  }
-  
-  .form {
+    align-items: center;
+    height: 100vh;
+    background-color: #f8f9fa; /* Color de fondo suave */
+}
+
+.login-header {
+    background-color: #ffffff; /* Fondo blanco para el formulario */
+    padding: 2rem;
+    border-radius: 8px; /* Bordes redondeados */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra delicada */
+    border: 1px solid #ddd; /* Borde delicado */
+    text-align: center;
+    max-width: 400px;
+    width: 100%;
+}
+
+.login-header h1 {
+    margin-bottom: 1.5rem;
+    font-size: 1.5rem;
+    color: #333;
+}
+
+.form {
     display: flex;
     flex-direction: column;
-    align-items: center;
-  }
-  
-  .formGroup {
-    margin-bottom: 15px;
-  }
-  
-  .label {
-    margin-bottom: 5px;
+}
+
+.formGroup {
+    margin-bottom: 1rem;
+}
+
+.label {
+    display: block;
+    margin-bottom: 0.5rem;
     font-weight: bold;
-  }
-  
-  .input {
-    padding: 10px;
-    font-size: 16px;
-    border-radius: 5px;
+    color: #333;
+}
+
+.input {
+    width: 100%;
+    padding: 0.75rem;
     border: 1px solid #ccc;
-  }
-  
-  .button {
-    padding: 10px;
-    font-size: 16px;
-    border-radius: 5px;
-    border: none;
+    border-radius: 4px;
+    font-size: 1rem;
+}
+
+.button {
+    display: inline-block;
+    width: 100%;
+    padding: 0.75rem;
+    border: none;    
     background-color: #007bff;
     color: #fff;
+    font-size: 1rem;
     cursor: pointer;
-    margin-top: 10px;
-  }
-  
-  .message {
-    margin-top: 20px;
+    margin-top: .5rem;
     text-align: center;
-    color: green;
-  }
-  
+    text-decoration: none; /* Elimina el subrayado de los enlaces */
+    transition: background-color 0.3s ease;
+}
+
+.button:hover {
+    background-color: #0056b3;
+}
+
+.message {
+    margin-top: 1rem;
+    color: #d9534f;
+}
+
+.button-group {
+    display: flex;
+    flex-direction: column;
+}
