--- a/frontend/ruti-front/src/components/styles/SignupStyles/SignupStyles.css
+++ b/frontend/ruti-front/src/components/styles/SignupStyles/SignupStyles.css
@@ -1,52 +1,75 @@
-.container {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background-color: #f9f9f9;
-  }
-  
-  .title {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  .form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .formGroup {
-    margin-bottom: 15px;
-  }
-  
-  .label {
-    margin-bottom: 5px;
-    font-weight: bold;
-  }
-  
-  .input {
-    padding: 10px;
-    font-size: 16px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-  }
-  
-  .button {
-    padding: 10px;
-    font-size: 16px;
-    border-radius: 5px;
-    border: none;
-    background-color: #007bff;
-    color: #fff;
-    cursor: pointer;
-  }
-  
-  .message {
-    margin-top: 20px;
-    text-align: center;
-    color: green;
-  }
-  
+/* Estilos para el contenedor de autenticación */
+.auth-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f8f9fa; /* Color de fondo suave */
+}
+
+.auth-header {
+  background-color: #ffffff; /* Fondo blanco para el formulario */
+  padding: 2rem;
+  border-radius: 8px; /* Bordes redondeados */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra delicada */
+  border: 1px solid #ddd; /* Borde delicado */
+  text-align: center;
+  max-width: 400px;
+  width: 100%;
+}
+
+.auth-header h1 {
+  font-size: 1.5rem;
+  color: #333;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+}
+
+
+.label {
+  display: block;
+  margin-bottom: 0.5rem;
+  font-weight: bold;
+  color: #333;
+}
+
+.input {
+  width: 100%;
+  padding: 0.75rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1rem;
+}
+
+.button {
+  display: inline-block;
+  width: 100%;
+  padding: 0.75rem;
+  border: none;
+  border-radius: 4px;
+  background-color: #007bff;
+  color: #fff;
+  font-size: 1rem;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none; /* Elimina el subrayado de los enlaces */
+  transition: background-color 0.3s ease;
+}
+
+.button:hover {
+  background-color: #0056b3;
+}
+
+.message {
+  margin-top: 1rem;
+  color: #ffcc00;
+}
+
+.button-group {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1rem;
+}
