--- a/frontend/ruti-front/src/components/styles/ExerciseStyles/ExerciseCard.css
+++ b/frontend/ruti-front/src/components/styles/ExerciseStyles/ExerciseCard.css
@@ -1,13 +1,36 @@
 /* src/components/Card.css o el archivo CSS que estés utilizando */
 .card-text {
-    display: flex;
-    justify-content: space-between; /* Distribuye el espacio entre las columnas */
-    align-items: flex-start; /* Alinea los elementos verticalmente en la parte superior */
-  }
-  
-  .date-column {
-    display: flex;
-    flex-direction: column; /* Organiza los elementos en una columna */
-    align-items: flex-start; /* Alinea los elementos horizontalmente a la izquierda */
-  }
-  
+  display: flex;
+  justify-content: space-between;
+  /* Distribuye el espacio entre las columnas */
+  align-items: flex-start;
+  /* Alinea los elementos verticalmente en la parte superior */
+}
+
+.date-column {
+  display: flex;
+  flex-direction: column;
+  /* Organiza los elementos en una columna */
+  align-items: flex-start;
+  /* Alinea los elementos horizontalmente a la izquierda */
+}
+
+.container {
+  position: relative;
+}
+
+.title {
+  display: inline-block;
+}
+
+.view-all-link {
+  position: absolute;
+  right: 0;
+  top: 0;
+  text-decoration: none;
+  color: blue; /* Cambia el color según tus necesidades */
+}
+
+.view-all-link:hover {
+  text-decoration: underline; /* Añade un subrayado al pasar el ratón por encima */
+}
